k8s/deploy/webhookrelay.yaml
---
# Source: webhookrelay/templates/services/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhookrelay-api
  namespace: webhookrelay
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
    - port: 8081
      targetPort: metrics
      protocol: TCP
      name: metrics
  selector:
    app.kubernetes.io/name: webhookrelay
    app.kubernetes.io/instance: api
---
# Source: webhookrelay/templates/services/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhookrelay-publisher
  namespace: webhookrelay
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: metrics
      protocol: TCP
      name: metrics
  selector:
    app.kubernetes.io/name: webhookrelay
    app.kubernetes.io/instance: publisher
---
# Source: webhookrelay/templates/services/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhookrelay-provisioner
  namespace: webhookrelay
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: metrics
      protocol: TCP
      name: metrics
  selector:
    app.kubernetes.io/name: webhookrelay
    app.kubernetes.io/instance: provisioner
---
# Source: webhookrelay/templates/deployments/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhookrelay-api
  namespace: webhookrelay
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: webhookrelay
      app.kubernetes.io/instance: api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: webhookrelay
        app.kubernetes.io/instance: api
    spec:
      containers:
        - name: api
          image: "broswen/webhookrelay-api:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: metrics
              containerPort: 8081
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: http
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: http
          resources:
            {}
---
# Source: webhookrelay/templates/deployments/provisioner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhookrelay-provisioner
  namespace: webhookrelay
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: webhookrelay
      app.kubernetes.io/instance: provisioner
  template:
    metadata:
      labels:
        app.kubernetes.io/name: webhookrelay
        app.kubernetes.io/instance: provisioner
    spec:
      containers:
        - name: provisioner
          image: "broswen/webhookrelay-provisioner:latest"
          imagePullPolicy: Always
          ports:
            - name: metrics
              containerPort: 8081
              protocol: TCP
          livenessProbe:
            null
          readinessProbe:
            null
          resources:
            {}
---
# Source: webhookrelay/templates/deployments/publisher.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhookrelay-publisher
  namespace: webhookrelay
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: webhookrelay
      app.kubernetes.io/instance: publisher
  template:
    metadata:
      labels:
        app.kubernetes.io/name: webhookrelay
        app.kubernetes.io/instance: publisher
    spec:
      containers:
        - name: publisher
          image: "broswen/webhookrelay-publisher:latest"
          imagePullPolicy: Always
          ports:
            - name: metrics
              containerPort: 8081
              protocol: TCP
          livenessProbe:
            null
          readinessProbe:
            null
          resources:
            {}
---
# Source: webhookrelay/templates/services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhookrelay-api
  namespace: webhookrelay
spec:
  ingressClassName: traefik
  rules:
    - host: webhookrelay.broswen.com
      http:
        paths:
          - backend:
              service:
                name: webhookrelay-api
                port:
                  number: 8080
            path: /
            pathType: Prefix
